7.80 -> 7.81
18/08/2013

- Fixed lua error when Pop-up Torpedo Launcher died on sea floor
- Fixed units dying when Pop-up Torps rose
- Hid specs after quit in AdvPlayerList
- Fixed 'normal quits' caused by Awards gadgets
- Fixed awards being given to spectators ;)
- Fixed Ally Cursors showing spec cursors to players
- Disabled Startpoint Assist until Spring 95.0


7.79 -> 7.80
18/08/2013

- Fixed specs not being white in Lock Camera and Ally Cursorss
- Fixed not being able to resign when had 0 units left
- Prevent spam of "i took" messages from over-enthusiastic takers & fixed text
- Reduce "i took" to a single line and use rounded numbers 
- Require players to use a few resources before getting the efficiency award
- Fixed some other rare lua errors

7.78 -> 7.79
18/08/2013

- Updated game end gadget 
- Added awards gadget
- Fixed Startpoint Assist not catching afk players
- Lock Camera and Ally Cursors become gadgets, net traffic halved
- Afk players are takeable (threshold is afk for 90s or afk at gamestart with no initial queue)
- Take reminders are handled entirely through AdvPlayerList
- Units remember exp when resurrected
- Fixed Waypoint Dragger causing crashes for some mice
- Fixed widget handler passing bad arguments in UnitCreated
- Initial Queue orientates its first building towards the map center
- Unit Moving widget moves units forwards instead of randomly
- Wind Generator death explosion gives 'old' chaining behaviour
- Remade impulse of Leveller & Janus 
- Fixed dynamic collision vols that couldn't be hit by some weapons when closed 
- Fixed Dragons Teeth not getting crushed
- Naval Engineers can't build Croc/Triton and T1 Amphib Constructors 
- Increased Croc buildtime
- Fixed torpedo bomber aiming
- Increased death explosions of T1 Construction Ships and Tidal Generators
- Increased T1 Ship Cons builtime and reduced manouevability
- Increased T1 Torpedo Launcher buildtime


7.76 -> 7.78
27/06/2013