@@ -26,7 +26,7 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		maxdamage = 3090,
-		maxvelocity = 3.3399999141693,
+		maxvelocity = 2.839,
 		minwaterdepth = 12,
 		movementclass = "BOAT4",
 		name = "Crusader",
@@ -34,7 +34,7 @@ return {
 		objectname = "ARMROY",
 		seismicsignature = 0,
 		selfdestructas = "BIG_UNIT",
-		sightdistance = 550,
+		sightdistance = 490,
 		sonardistance = 400,
 		turnrate = 199,
 		waterline = 4.5,
